Fixed bottom of Farsi state text getting cut off on IE7

--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -753,3 +753,10 @@ hr.dotted {
   border-bottom-style: none;
   border-bottom-width: 0px;
 }
+
+// Override base SlabText styling
+.slabtextdone .slabtext {
+  // The default line-height is not big enough for for letters that drop below
+  // the baseline, at least for Farsi on IE7.
+  line-height: 1.2;
+}
